# Simple-Snake

./: .gitignore  CMakeLists.txt  TODO  g_build
include/: constants.hpp  enums.hpp  food-proxy.hpp  food.hpp  game.hpp  logger.hpp  menu.hpp  point.hpp  snake.hpp  timer.hpp
src/: game.cpp  main.cpp  snake.cpp
